--- a/src/modulo-03-html-css/estilo.css
+++ b/src/modulo-03-html-css/estilo.css
@@ -1,45 +1,53 @@
 body {
-  background: url(http://gamingnews.com.br/wp-content/uploads/streat.jpg) no-repeat;
+  background: url(http://www.desktopimages.org/preview/get_photo/66514/1280/720) no-repeat;
   font-family: Arial;
 }
 
-#menu {
+.menu {
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.6);
+  border: 1px solid silver;
   width: 500px;
   height: 50px;
-  margin: 210px auto;
-  background-color: silver;
+  margin: 220px auto 50px auto;
+  background-color: rgba(255, 255, 255, 0.4);
+  text-align: center;
   }
 
-#menu li {
+.menu li  {
   display: inline;
   color: white;
   font-weight: bold;
   margin-right: 20px;
-  text-align: center;
-  opacity: 1;
+ }
+ 
+ .menu li a {
+	text-decoration: none;
+ }
+ 
+ div {
+	width: 650px;
+	margin: auto;
 }
 
-div {
-  width: 700px;
-  background-color: silver;
-  margin: 10px auto;"
+.titulo {
+	background-color: #444444;
+	color: #ededed;
+	padding: 10px;
 }
 
-h1 {
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-bottom: 20px;
+.conteudo {
+	background-color: #ededed;
+	padding: 10px;
+	min-height: 560px;
 }
 
-#conteudo {
-  margin: 0px;
-  width: 700px;
-  margin: auto;
-  background-color: #CFCFCF;"
+.conteudo p {
+	text-align: left;
+	margin-left: 300px;
+	margin-bottom: auto;
 }
 
-h2, h3, p {
-  padding: 20px;
+.conteudo img {
+	float: left;
 }
+
