--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Content/Site.css
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Content/Site.css
@@ -8,3 +8,12 @@
     padding-left: 15px;
     padding-right: 15px;
 }
+
+#titulo {
+    padding-bottom: 15px;
+}
+
+#urgente {
+    color: red;
+    font-size: 24px;
+}
