--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Pedido/Listagem.cshtml
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Pedido/Listagem.cshtml
@@ -1,7 +1,94 @@
-﻿
-@{
-    ViewBag.Title = "Listagem";
+﻿@model IEnumerable<LojaNinja.Dominio.Pedido>
+
+
+
+@using (Html.BeginForm("Listagem", "Pedido", FormMethod.Get))
+{
+    <form class="form-horizontal" role="form">
+        <div class="form-group">
+            <div class="col-md-4">
+                  <input type="text" class="form-control" placeholder="Cliente" name="cliente" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-4">
+                <input class="form-control" type="text" placeholder="Produto" name="produto" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-4">
+                <button type="submit" class="btn btn-default" value="Listagem">Filtrar</button>
+            </div>
+        </div>
+    </form>
 }
+    <div class="col-md-12">
+         <h2 id="titulo">Listagem</h2>
+    </div>
+        
 
-<h2>Listagem</h2>
+        <table class="table table-bordered table-striped">
+            <tr>
+                <th>
+                    Data do Pedido
+                </th>
+                <th>
+                    Data Entrega Des.
+                </th>
+                <th>
+                    Produto
+                </th>
+                <th>
+                    Valor
+                </th>
+                <th>
+                    Cliente
+                </th>
+                <th>
+                    Cidade
+                </th>
+                <th>
+                    Estado
+                </th>
+                <th></th>
+            </tr>
 
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @item.DataPedido
+                    </td>
+                    <td>
+                        @item.DataEntregaDesejada
+                    </td>
+                    <td>
+                        @item.NomeProduto
+                    </td>
+                    <td>
+                        R$ @if (item.Valor % 2 == 0)
+                        {
+                            <span> @item.Valor ,00</span>
+                        }
+                        else
+                        {
+                            @item.Valor
+                        }
+                    </td>
+                    <td>
+                        @item.NomeCliente
+                    </td>
+                    <td>
+                        @item.Cidade
+                    </td>
+                    <td>
+                        @item.Estado
+                    </td>
+                    <td>
+                        <a href="~/Pedido/Manter/@item.Id">Editar</a>
+                        <a href="~/Pedido/Detalhes/@item.Id">Detalhes</a>
+                        <a href="~/Pedido/Excluir/@item.Id">Remover</a>
+                    </td>
+                </tr>
+            }
+        </table>
