--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,22 +10,15 @@
     <title>@ViewBag.Title - Loja Ninja</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Loja Ninja", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Cadastrar novo Pedido", "Cadastro", "Pedido", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+            <div class="navbar-header">
+                @Html.ActionLink("Lista de Pedidos", "Listagem", "Pedido", new { area = "" }, new { @class = "navbar-brand" })
             </div>
         </div>
     </div>
@@ -35,6 +32,6 @@
     </div>
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    @RenderSection("scripts", false) 
 </body>
 </html>
