fix(LojaNinja): remover ícone flag de Pedido Urgente que não estava aparecendo.

--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Pedido/Detalhes.cshtml
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Pedido/Detalhes.cshtml
@@ -85,11 +85,11 @@
         <dd>
             @if (@Model.PedidoUrgente)
             {
-                <span class="glyphicon-flag" id="urgente"></span>
+                <span>Sim</span>
             }
             else
             {
-                <span class="glyphicon-flag" id="nao-urgente"></span>
+                <span>Não</span>
             }
 
         </dd>
