feat(LojaNinja): modificar nome apresentado no menu.

--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 @Html.ActionLink("Cadastrar novo Pedido", "Cadastro", "Pedido", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-header">
-                @Html.ActionLink("Lista de Pedidos", "Listagem", "Pedido", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Pedidos", "Listagem", "Pedido", new { area = "" }, new { @class = "navbar-brand" })
             </div>
         </div>
     </div>
