--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
             <div class="navbar-header">
                 @Html.ActionLink("Pedidos", "Listagem", "Pedido", new { area = "" }, new { @class = "navbar-brand" })
             </div>
+            <div class="navbar-header">
+                @Html.ActionLink("Login", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
+            </div>
         </div>
     </div>
 
