--- a/src/modulo-06-ajax/Lista2/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
+++ b/src/modulo-06-ajax/Lista2/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
@@ -4,47 +4,101 @@
     }
 </style>
 
+<form id="frmNovoCavaleiro" method="POST">
+    <!-- nome -->
+    <label for="txtNomeCavaleiro">Nome</label>
+    <input id="txtNomeCavaleiro" type="text" name="nome" placeholder="Ex: Shiryu"><br>
+    <!-- tipoSanguineo -->
+    <label for="slTipoSanguineo">Tipo Sanguíneo</label>
+    <select id="slTipoSanguineo" name="tipoSanguineo">
+        <option selected>Selecione</option>
+        <option value="A">A</option>
+        <option value="B">B</option>
+        <option value="AB">AB</option>
+        <option value="O">O</option>
+    </select><br>
+    <!-- dataNascimento -->
+    <label for="txtDtNascimento">Data de nascimento</label>
+    <input id="txtDtNascimento" type="text" name="dataNascimento" placeholder="Ex: 4/11/2016"><br>
+    <!-- altura em metros -->
+    <label for="nbAlturaMetros">Altura (metros)</label>
+    <input id="nbAlturaMetros" type="number" name="alturaMetros" placeholder="Ex: 1.76" min="0" step="0.01"> <!-- step: https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/Input --><br>
+    <!-- peso em kilos -->
+    <label for="nbPesoKilos">Peso (kilos)</label>
+    <input id="nbPesoKilos" type="number" name="pesoKg" placeholder="Ex: 73.5" min="0" step="0.01"><br>
+    <!-- signo -->
+    <label for="slSigno">Signo</label>
+    <select id="slSigno" name="signo">
+        <option selected>Selecione</option>
+        <option value="Áries">Áries</option>
+        <option value="Touro">Touro</option>
+        <option value="Gêmeos">Gêmeos</option>
+        <option value="Câncer">Câncer</option>
+        <option value="Leão">Leão</option>
+        <option value="Virgem">Virgem</option>
+        <option value="Libra">Libra</option>
+        <option value="Escorpião">Escorpião</option>
+        <option value="Sagitário">Sagitário</option>
+        <option value="Capricórnio">Capricórnio</option>
+        <option value="Aquário">Aquário</option>
+        <option value="Peixes">Peixes</option>
+    </select><br>
+    <!-- localNascimento -->
+    <label for="txtLocalNascimento">Local de nascimento</label>
+    <input id="txtLocalNascimento" type="text" name="localNascimento" placeholder="Ex: Porto Alegre"><br>
+    <!-- localTreinamento -->
+    <label for="txtLocalTreinamento">Local de treinamento</label>
+    <input id="txtLocalTreinamento" type="text" name="localTreinamento" placeholder="Ex: Alvorada"><br>
+    <!-- Adicionar golpe -->
+    <button id="btnAdicionarGolpe" type="button">Adicionar golpe...</button>
+    <ul id="novosGolpes"></ul>
+    <!-- Adicionar imagem -->
+    <button id="btnAdicionarImg" type="button">Adicionar imagem...</button>
+    <ul id="novasImagens"></ul>
+    <button type="submit" class="btn btn-primary">Cadastrar!</button>
+</form>
+<hr>
 <h3>Listagem de cavaleiros</h3>
 
+<div id="detalhes-cavaleiro"></div>
 <ul id="cavaleiros"></ul>
-<div id="feedback"></div>
-<button id="btnCriar">Criar hard-coded!</button>  
 
-<script>
-    var urlCavaleiroGet = '@Url.Action("Get")';
-    var urlCavaleiroPost = '@Url.Action("Post")';
-    setInterval(function () {
-        var cavaleiros = $("li");
-        var cavaleirosExibidos = cavaleiros.length;
-        $.ajax({ url: urlCavaleiroGet, type: 'GET' }).done(function (res) {
-            var cavaleirosNoBanco = res.data;
-            if (cavaleirosExibidos < cavaleirosNoBanco.length) {
-                var count = 0;
-                for (var i = cavaleirosExibidos; i < cavaleirosNoBanco.length; i++) {
-                    $('#cavaleiros').append(criarHtmlCavaleiro(cavaleirosNoBanco[i]));
-                    count++;
+    <script>
+        var urlCavaleiroGet = '@Url.Action("Get")';
+        var urlCavaleiroPost = '@Url.Action("Post")';
+        setInterval(function () {
+            var cavaleiros = $("li");
+            var cavaleirosExibidos = cavaleiros.length;
+            $.ajax({ url: urlCavaleiroGet, type: 'GET' }).done(function (res) {
+                var cavaleirosNoBanco = res.data;
+                if (cavaleirosExibidos < cavaleirosNoBanco.length) {
+                    var count = 0;
+                    for (var i = cavaleirosExibidos; i < cavaleirosNoBanco.length; i++) {
+                        $('#cavaleiros').append(criarHtmlCavaleiro(cavaleirosNoBanco[i]));
+                        count++;
+                    }
+
+                    if (count > 0)
+                        notificar(count);
                 }
+            });
+        }, 5000);
 
-                if(count > 0)
-                    notificar(count);
-            }   
-        });
-    }, 5000);
-
-    function notificar(qtdCavaleiros) {
-        Notification.requestPermission().then(function (result) {
-            console.log(result);
-            if (result === 'granted') {
-                var texto = qtdCavaleiros === 1 ? ' novo cavaleiro foi adicionado!' : ' novos cavaleiros foram adicionados!';
-                var options = {
-                    body: qtdCavaleiros + texto
+        function notificar(qtdCavaleiros) {
+            Notification.requestPermission().then(function (result) {
+                console.log(result);
+                if (result === 'granted') {
+                    var texto = qtdCavaleiros === 1 ? ' novo cavaleiro foi adicionado!' : ' novos cavaleiros foram adicionados!';
+                    var options = {
+                        body: qtdCavaleiros + texto
+                    }
+                    new Notification('', options);
                 }
-                new Notification('', options);
-            }
-        });
-    };
-</script>
+            });
+        };
+    </script>
 
-@section scripts {
-    <script src="~/Scripts/Views/Cavaleiro/Index.js"></script>
-}
+    @section scripts {
+        <script src="~/Scripts/Views/Cavaleiro/Index.js"></script>
+        <script src="~/Scripts/Views/Cavaleiro/Cadastro.js"></script>
+   }
