--- a/src/modulo-06-ajax/Lista2/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
+++ b/src/modulo-06-ajax/Lista2/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
@@ -6,68 +6,94 @@
 
 <form id="frmNovoCavaleiro" method="POST">
     <!-- nome -->
-    <label for="txtNomeCavaleiro">Nome</label>
-    <input id="txtNomeCavaleiro" type="text" name="nome" placeholder="Ex: Shiryu"><br>
-    <!-- tipoSanguineo -->
-    <label for="slTipoSanguineo">Tipo Sanguíneo</label>
-    <select id="slTipoSanguineo" name="tipoSanguineo">
-        <option selected>Selecione</option>
-        <option value="A">A</option>
-        <option value="B">B</option>
-        <option value="AB">AB</option>
-        <option value="O">O</option>
-    </select><br>
-    <!-- dataNascimento -->
-    <label for="txtDtNascimento">Data de nascimento</label>
-    <input id="txtDtNascimento" type="text" name="dataNascimento" placeholder="Ex: 4/11/2016"><br>
-    <!-- altura em metros -->
-    <label for="nbAlturaMetros">Altura (metros)</label>
-    <input id="nbAlturaMetros" type="number" name="alturaMetros" placeholder="Ex: 1.76" min="0" step="0.01"> <!-- step: https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/Input --><br>
-    <!-- peso em kilos -->
-    <label for="nbPesoKilos">Peso (kilos)</label>
-    <input id="nbPesoKilos" type="number" name="pesoKg" placeholder="Ex: 73.5" min="0" step="0.01"><br>
-    <!-- signo -->
-    <label for="slSigno">Signo</label>
-    <select id="slSigno" name="signo">
-        <option selected>Selecione</option>
-        <option value="Áries">Áries</option>
-        <option value="Touro">Touro</option>
-        <option value="Gêmeos">Gêmeos</option>
-        <option value="Câncer">Câncer</option>
-        <option value="Leão">Leão</option>
-        <option value="Virgem">Virgem</option>
-        <option value="Libra">Libra</option>
-        <option value="Escorpião">Escorpião</option>
-        <option value="Sagitário">Sagitário</option>
-        <option value="Capricórnio">Capricórnio</option>
-        <option value="Aquário">Aquário</option>
-        <option value="Peixes">Peixes</option>
-    </select><br>
-    <!-- localNascimento -->
-    <label for="txtLocalNascimento">Local de nascimento</label>
-    <input id="txtLocalNascimento" type="text" name="localNascimento" placeholder="Ex: Porto Alegre"><br>
-    <!-- localTreinamento -->
-    <label for="txtLocalTreinamento">Local de treinamento</label>
-    <input id="txtLocalTreinamento" type="text" name="localTreinamento" placeholder="Ex: Alvorada"><br>
-    <!-- Adicionar golpe -->
-    <button id="btnAdicionarGolpe" type="button">Adicionar golpe...</button>
-    <ul id="novosGolpes"></ul>
-    <!-- Adicionar imagem -->
-    <button id="btnAdicionarImg" type="button">Adicionar imagem...</button>
-    <ul id="novasImagens"></ul>
-    <button type="submit" class="btn btn-primary">Cadastrar!</button>
+    <div class="form-group">
+        <label for="txtNomeCavaleiro">Nome</label>
+        <input id="txtNomeCavaleiro" type="text" name="nome" placeholder="Ex: Shiryu" class="form-control"><br>
+    </div>
+    <div class="form-group">
+        <!-- tipoSanguineo -->
+        <label for="slTipoSanguineo">Tipo Sanguíneo</label>
+        <select id="slTipoSanguineo" name="tipoSanguineo" class="form-control">
+            <option selected>Selecione</option>
+            <option value="A">A</option>
+            <option value="B">B</option>
+            <option value="AB">AB</option>
+            <option value="O">O</option>
+        </select><br>
+    </div>
+    <div class="form-group">
+        <!-- dataNascimento -->
+        <label for="txtDtNascimento">Data de nascimento</label>
+        <input id="txtDtNascimento" type="text" name="dataNascimento" placeholder="Ex: 4/11/2016" class="form-control"><br>
+    </div>
+    <div class="form-group">
+        <!-- altura em metros -->
+        <label for="nbAlturaMetros">Altura (metros)</label>
+        <input id="nbAlturaMetros" type="number" name="alturaMetros" placeholder="Ex: 1.76" min="0" step="0.01" class="form-control"> <!-- step: https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/Input --><br>
+    </div>
+    <div class="form-group">
+        <!-- peso em kilos -->
+        <label for="nbPesoKilos">Peso (kilos)</label>
+        <input id="nbPesoKilos" type="number" name="pesoKg" placeholder="Ex: 73.5" min="0" step="0.01" class="form-control"><br>
+    </div>
+    <div class="form-group">
+        <!-- signo -->
+        <label for="slSigno">Signo</label>
+        <select id="slSigno" name="signo" class="form-control">
+            <option selected>Selecione</option>
+            <option value="Áries">Áries</option>
+            <option value="Touro">Touro</option>
+            <option value="Gêmeos">Gêmeos</option>
+            <option value="Câncer">Câncer</option>
+            <option value="Leão">Leão</option>
+            <option value="Virgem">Virgem</option>
+            <option value="Libra">Libra</option>
+            <option value="Escorpião">Escorpião</option>
+            <option value="Sagitário">Sagitário</option>
+            <option value="Capricórnio">Capricórnio</option>
+            <option value="Aquário">Aquário</option>
+            <option value="Peixes">Peixes</option>
+        </select><br>
+    </div>
+    <div class="form-group">
+        <!-- localNascimento -->
+        <label for="txtLocalNascimento">Local de nascimento</label>
+        <input id="txtLocalNascimento" type="text" name="localNascimento" placeholder="Ex: Porto Alegre" class="form-control"><br>
+    </div>
+    <div class="form-group">
+        <!-- localTreinamento -->
+        <label for="txtLocalTreinamento">Local de treinamento</label>
+        <input id="txtLocalTreinamento" type="text" name="localTreinamento" placeholder="Ex: Alvorada" class="form-control"><br>
+    </div>
+    <div class="form-group">
+        <!-- Adicionar golpe -->
+        <button id="btnAdicionarGolpe" type="button" class="btn btn-default">Adicionar golpe...</button>
+        <ul id="novosGolpes"></ul>
+    </div>
+    <div class="form-group">
+        <!-- Adicionar imagem -->
+        <button id="btnAdicionarImg" type="button" class="btn btn-default">Adicionar imagem...</button>
+        <ul id="novasImagens"></ul>
+    </div>
+    <div class="form-group">
+            <button type="submit" class="btn btn-primary">Cadastrar!</button>
+    </div>
 </form>
 <hr>
 <h3>Listagem de cavaleiros</h3>
 
-<div id="detalhes-cavaleiro"></div>
-<ul id="cavaleiros"></ul>
+<div id="detalhes-cavaleiro">
+    <table id="cavaleiros" class="table">
+
+    </table>
+</div>
 
     <script>
         var urlCavaleiroGet = '@Url.Action("Get")';
         var urlCavaleiroPost = '@Url.Action("Post")';
         setInterval(function () {
-            var cavaleiros = $("#cavaleiros li");
+            var cavaleiros = $("#cavaleiros tr");
+            console.log(cavaleiros);
             var cavaleirosExibidos = cavaleiros.length;
             $.ajax({ url: urlCavaleiroGet, type: 'GET' }).done(function (res) {
                 var cavaleirosNoBanco = res.data;
@@ -76,7 +102,7 @@
                     for (var i = cavaleirosExibidos; i < cavaleirosNoBanco.length; i++) {
                         $('#cavaleiros').append(criarHtmlCavaleiro(cavaleirosNoBanco[i]));
                         count++;
-                    }
+                    } 
 
                     if (count > 0)
                         notificar(count);
