feat(Aula7): adicionar crud de cidades incompleto (falta aopção de editar).

--- a/src/modulo-08-java/aula7/modulo-08-java/aula6/crescer-web/src/main/webapp/template/header.xhtml
+++ b/src/modulo-08-java/aula7/modulo-08-java/aula6/crescer-web/src/main/webapp/template/header.xhtml
@@ -42,6 +42,12 @@
                                         <span class="glyphicon glyphicon-menu-right"/> <h:outputText value="#{bundle['page.header.person']}"/>
                                     </h:commandLink>
                                 </li>
+                                <li>
+                                    <h:commandLink action="cidade">
+                                        <span class="glyphicon glyphicon-menu-right"/> <h:outputText value="#{bundle['page.header.city']}"/>
+                                    </h:commandLink>
+                                </li>
+                                
                             </ul>
                         </li>
                     </ul>
